--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,8 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "react/prop-types": 0,
+    "linebreak-style": "off",
     "import/extensions": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
